client: open/close

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCES
-    src/test.cpp
     src/main.cpp
+    src/client.cpp
+    src/connection_data.cpp
 )
 
 add_executable(client ${SOURCES})
 
 target_include_directories(client PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(client PRIVATE Threads::Threads)
