server sign in/up

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,9 +1,9 @@
 set(SOURCES
     src/main.cpp
     src/server.cpp
-    src/connection_data.cpp
 )
 
 add_executable(server ${SOURCES})
 
 target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(server PRIVATE Threads::Threads)
